syntax = "proto3";

package polls.v1;
option go_package = "github.com/samouraiworld/zenao/backend/polls/v1;pollsv1";

message PollResult {
  string option = 1;
  uint32 count = 2;
  bool has_user_voted = 3;
}

message Poll {
  string question = 1;
  repeated PollResult results = 2;
  bool multiple_choices = 3;
  int64 duration = 4;
  int64 created_at = 5;
  string created_by = 6;
}
